--- a/cursoADVweb/src/app/blog/pages/cursos/cursos.component.html
+++ b/cursoADVweb/src/app/blog/pages/cursos/cursos.component.html
@@ -53,23 +53,26 @@
         </div>
       </div>
 
-      <div *ngIf="!carregando && listaCursos.length == 0" class="card" style="width: 18rem;">
-        <h4 class="text-center textImagem">
-          <p class="text defineFont mt-2" style="width: 100%;">
-            <strong class="">EM BREVE</strong>
-          </p>
-        </h4>
-        <img src="assets/imgs/site proinf quem somos e cursos/6.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          Esse <strong> cursos </strong> está em contrução, e em breve
-          traremos informações...
-          <!-- <button type="button"
-          class="btn btn-sm w-100 btn-danger icon-button shadow-sm rounded ">
-            <strong class="defineFontBtns text-center " style="font-size: 25px;">
-              Mais informações
-            </strong>
-          </button> -->
+      <div class=" w-100 d-flex flex-wrap justify-content-center">
+        <div *ngIf="!carregando && listaCursos.length == 0" class="card" style="width: 18rem;">
+          <h4 class="text-center textImagem">
+            <p class="text defineFont mt-2" style="width: 100%;">
+              <strong class="">EM BREVE</strong>
+            </p>
+          </h4>
+          <img src="assets/imgs/site proinf quem somos e cursos/6.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            Esse <strong> cursos </strong> está em contrução, e em breve
+            traremos informações...
+            <!-- <button type="button"
+            class="btn btn-sm w-100 btn-danger icon-button shadow-sm rounded ">
+              <strong class="defineFontBtns text-center " style="font-size: 25px;">
+                Mais informações
+              </strong>
+            </button> -->
+          </div>
         </div>
+
       </div>
 
 
