--- a/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
+++ b/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
@@ -62,19 +62,19 @@
     <hr>
     <div class=" defineFont {{isMobile? 'px-3':''}}">
       <h3 class=""> <strong class="fontTitulo2">ESPECIALIZAÇÃO PROFUNDA EM DIREITO DA CRIANÇA</strong></h3>
-      <p class="fs-5 mt-4 formataParagrafos">{{texto.toLocaleUpperCase()}}</p>
+      <p class="fs-5 mt-4">{{texto}}</p>
     </div>
 
     <hr>
     <div class=" defineFont {{isMobile? 'px-3':''}}">
       <h3 class=""> <strong class="fontTitulo2">METODOLOGIA INOVADORA</strong></h3>
-      <p class="fs-5 mt-4 formataParagrafos">{{texto2.toLocaleUpperCase()}}</p>
+      <p class="fs-5 mt-4">{{texto2}}</p>
     </div>
 
     <hr>
     <div class=" defineFont {{isMobile? 'px-3':''}}">
       <h3 class=""> <strong class="fontTitulo2">SUPORTE PERSONALIZADO E COMUNIDADE</strong></h3>
-      <p class="fs-5 mt-4 formataParagrafos">{{texto3.toLocaleUpperCase()}}</p>
+      <p class="fs-5 mt-4">{{texto3}}</p>
     </div>
   </div>
   <div *ngIf="!isMobile" class="w-100 d-flex flex-wrap justify-content-center" style="padding-right: 4rem;">
