--- a/cursoADVweb/src/app/blog/pages/quemSomos/quemSomos.component.html
+++ b/cursoADVweb/src/app/blog/pages/quemSomos/quemSomos.component.html
@@ -223,6 +223,9 @@
           </p>
         </div>
 
+        <div class="w-100">
+          <h1><strong class="fontTitulo">ADMINISTRADOR</strong></h1>
+        </div>
         <div class="{{isMobile? 'w-100 pt-2 d-flex justify-content-center':'w-25'}}">
           <div class="circle" style="height: 220px !important; width: 220px !important;">
             <img src="../../../../assets/imgs/site proinf quem somos e cursos/joao.jpeg"
