--- a/cursoADVweb/src/app/areaAluno/aula/aula.component.html
+++ b/cursoADVweb/src/app/areaAluno/aula/aula.component.html
@@ -148,7 +148,7 @@
           </div>
           <div class="col-12">
             <mat-form-field>
-              <mat-label>No que voçê esta pensando?</mat-label>
+              <!-- <mat-label>No que voçê esta pensando?</mat-label> -->
               <textarea class="pt-1" style="height: 73px !important;" (focus)="campoSelecionado = 'Conteudo'" formControlName="Conteudo" matInput></textarea>
             </mat-form-field>
           </div>
