--- a/cursoADVweb/src/app/areaAluno/contratacao/contratacao.component.html
+++ b/cursoADVweb/src/app/areaAluno/contratacao/contratacao.component.html
@@ -27,14 +27,14 @@
 
     <form [formGroup]="formularioCadastro" class="px-4 col-12 camposBrancos d-flex flex-wrap">
       <div class="col-12 d-flex flex-wrap ps-3 pt-3 pe-3 mb-4" style="background-color: white; border-radius: 10px;">
-        <div class="col-12">
+        <!-- <div class="col-12">
           <mat-form-field>
             <mat-label>Definir lista do candidato</mat-label>
             <mat-select [(ngModel)]="tipoAluno" formControlName="tipoAluno">
               <mat-option  *ngFor="let item of listaTipoAluno" value="{{item.index}}">{{item.descricao}}</mat-option>
             </mat-select>
           </mat-form-field>
-        </div>
+        </div> -->
         <div  class="col-12 d-flex flex-wrap justify-content-end pb-4" *ngIf="tipoAluno != '0'" >
           <div class="w-100 d-flex">
             <h3>Valor para os inscritos pelas cotas: </h3>
@@ -192,7 +192,7 @@
         </div>
       </div>
       <div *ngIf="tipoPagamento == 2" class="col-12 d-flex justify-content-center ps-3 pt-3 pb-3 pe-3 mb-4" style="background-color: white; border-radius: 10px;">
-        VOCÊ RECEBERA UM SMS COM O NOSSO QRCODE
+        VOCÊ RECEBERA UM SMS/EMAIL COM O NOSSO QRCODE
       </div>
       <!-- <div *ngIf="tipoPagamento == 3" class="col-12 d-flex justify-content-center ps-3 pt-3 pb-3 pe-3 mb-4" style="background-color: white; border-radius: 10px;">
         BOLETO
