--- a/cursoADVweb/src/app/areaAluno/area-aluno/aluno.component.html
+++ b/cursoADVweb/src/app/areaAluno/area-aluno/aluno.component.html
@@ -36,7 +36,8 @@
             <strong class="">{{curso.titulo.toLocaleUpperCase()}}</strong>
           </p>
         </h4>
-        <img src="{{curso.src}}" class="card-img-top" alt="...">
+        <!-- <img src="{{curso.src}}" class="card-img-top" alt="..."> -->
+        <img src="https://centroproinf.com.br/video/Direito da crianca.jpg" class="card-img-top" alt="...">
       </div>
 
       <div *ngIf="!curso.statusPago" class="card me-2" style="width: 18rem;">
