--- a/cursoADVweb/src/app/blog/pages/cursos/cursos.component.html
+++ b/cursoADVweb/src/app/blog/pages/cursos/cursos.component.html
@@ -41,7 +41,8 @@
             </p>
           </h4> -->
           <!-- *ngIf="!grupoEstudos.cursoContratado" -->
-          <img src="{{curso.src}}" class="card-img-top" alt="...">
+          <!-- <img src="{{curso.src}}" class="card-img-top" alt="..."> -->
+          <img src="https://centroproinf.com.br/video/Direito da crianca.jpg" class="card-img-top" alt="...">
           <div class="card-body" *ngIf="!curso.cursoContratado">
             <button type="button" (click)="redirecionar(curso)"
             class="btn btn-sm w-100 btn-danger icon-button shadow-sm rounded ">
