--- a/cursoADVweb/src/app/area-professor/videos/videos-editar/videos-editar.component.html
+++ b/cursoADVweb/src/app/area-professor/videos/videos-editar/videos-editar.component.html
@@ -27,7 +27,7 @@
     </div>
     <mat-form-field class=" " *ngIf="!carregandoArquivos">
       <mat-label>Vincule arquivos ao seu video</mat-label>
-      <mat-select [formControl]="toppings" multiple>
+      <mat-select (selectionChange)="definirArquivos($event.value)" [formControl]="toppings" multiple>
         <mat-select-trigger>
           {{toppings.value?.[0] || ''}}
           @if ((toppings.value?.length || 0) > 1) {
@@ -37,7 +37,7 @@
           }
         </mat-select-trigger>
         @for (topping of toppingList; track topping) {
-      <mat-option (click)="definirArquivos(topping)" [value]="topping">{{topping}}</mat-option>
+      <mat-option [value]="topping">{{topping}}</mat-option>
       }
     </mat-select>
     </mat-form-field>
