--- a/cursoADVweb/src/app/areaAluno/contratacao/contratacao.component.html
+++ b/cursoADVweb/src/app/areaAluno/contratacao/contratacao.component.html
@@ -12,31 +12,36 @@
   <div *ngIf="!carregando" class="{{isMobile?'col-12':'col-6'}} d-flex flex-wrap" style="background-color: #ffedeb; border-radius: 10px; border: 1px solid #e64944;">
     <div class="col-12 pt-4 px-4 d-flex flex-wrap">
       <div class="col-3">
-        <img style="border-radius: 10px;" src="{{curso.src}}" class="card-img-top" alt="...">
+        <!-- <img style="border-radius: 10px;" src="{{curso.src}}" class="card-img-top" alt="..."> -->
+        <img style="border-radius: 10px;" src="https://centroproinf.com.br/video/Direito da crianca.jpg" class="card-img-top" alt="...">
       </div>
       <div class="col-9 ps-3">
         <h2><p><b>{{curso.titulo}}</b></p></h2>
-        <h1>
+        <h1 *ngIf="curso.tipoCurso != 'CURSO'">
           <b style="color: #e64944;">{{parcelas}}</b><br>
           <small style="font-size:medium;">{{valorFormatado}} à vista <br/> ou {{valorComDesconto}} inscritos pelas cotistas</small>
+        </h1>
+        <h1 *ngIf="curso.tipoCurso == 'CURSO'">
+          <b style="color: #e64944;">{{parcelas}}</b><br>
+          <small style="font-size:medium;">{{valorFormatado}} à vista </small>
         </h1>
       </div>
     </div>
 
     <hr class="mt-2 mb-2 mx-4" style="width:100%; color: #e64944; height: 2px; border-bottom: 1px solid #e64944;">
 
-    <form [formGroup]="formularioCadastro" class="px-4 col-12 camposBrancos d-flex flex-wrap">
-      <div class="col-12 d-flex flex-wrap ps-3 pt-3 pe-3 mb-4" style="background-color: white; border-radius: 10px;">
-        <!-- <div class="col-12">
+    <form  [formGroup]="formularioCadastro" class="px-4 col-12 camposBrancos d-flex flex-wrap">
+      <div *ngIf="curso.tipoCurso != 'CURSO'" class="col-12 d-flex flex-wrap ps-3 pt-3 pe-3 mb-4" style="background-color: white; border-radius: 10px;">
+        <div class="col-12">
           <mat-form-field>
             <mat-label>Definir lista do candidato</mat-label>
             <mat-select [(ngModel)]="tipoAluno" formControlName="tipoAluno">
               <mat-option  *ngFor="let item of listaTipoAluno" value="{{item.index}}">{{item.descricao}}</mat-option>
             </mat-select>
           </mat-form-field>
-        </div> -->
+        </div>
         <div  class="col-12 d-flex flex-wrap justify-content-end pb-4" *ngIf="tipoAluno != '0'" >
-          <div class="w-100 d-flex">
+          <div *ngIf="curso.tipoCurso != 'CURSO'" class="w-100 d-flex">
             <h3>Valor para os inscritos pelas cotas: </h3>
             <h3 class="ps-2">
               <b style="color: #e64944;"> {{valorComDesconto}}</b><br>
@@ -67,6 +72,14 @@
           </div>
         </div>
       </div>
+
+      <div class="col-12">
+        <mat-form-field  class="example-full-width w-100 pt-2">
+          <mat-label>Adicione o seu cupom aqui</mat-label>
+          <input (change)="validaCupon()" matInput formControlName="Cupom">
+        </mat-form-field>
+      </div>
+
       <div class="col-12">
         <mat-form-field  class="example-full-width w-100 pt-2">
           <mat-label>Nome completo</mat-label>
