--- a/cursoADVweb/src/styles.scss
+++ b/cursoADVweb/src/styles.scss
@@ -88,15 +88,10 @@ html {
   }
 }
 
-// .mat-mdc-dialog-container .mdc-dialog__surface {
-//   width: 55% !important;
-//   @media screen and (max-width: 900px) {
-//     width: 100% !important;
-
-//   }
-
-//   height: 100%;
-// }
+.mat-mdc-form-field:not(.mat-form-field-no-animations) .mdc-text-field__input {
+  transition: opacity 150ms 0ms cubic-bezier(0.4, 0, 0.2, 1);
+  line-height: normal;
+}
 
 
 .defineTamanhoTela{
