--- a/cursoADVweb/src/app/blog/pages/cursos/descricaoCurso/descricao-curso.component.html
+++ b/cursoADVweb/src/app/blog/pages/cursos/descricaoCurso/descricao-curso.component.html
@@ -68,9 +68,9 @@
       </div>
 
     </div>
-    <div class="col mt-2 p-3 fs-5 formataParagrafos">
+    <!-- <div class="col mt-2 p-3 fs-5 formataParagrafos">
       {{curso.materialApoio}}
-    </div>
+    </div> -->
   </div>
 
   <!-- <div class="w-100 d-flex justify-content-center mt-5 mb-5">
