--- a/cursoADVweb/src/app/components/roda-pe/roda-pe.component.html
+++ b/cursoADVweb/src/app/components/roda-pe/roda-pe.component.html
@@ -18,9 +18,9 @@
         <h3>
           <strong class="defineFontGordita">MENU</strong>
         </h3>
-        <h4><a class="removerLayout" href="https://centroproinf.com.br/#/blog/inicio">{{'Início'}} </a></h4>
-        <h4><a class="removerLayout" href="https://centroproinf.com.br/#/blog/quemSomos">{{'Quem somos'}} </a></h4>
-        <h4> <a class="removerLayout" href="https://centroproinf.com.br/#/blog/cursos">{{'Cursos'}}</a></h4>
+        <h4><a class="removerLayout" (click)="direciona('Início')" href="https://centroproinf.com.br/#/blog/inicio">{{'Início'}} </a></h4>
+        <h4><a class="removerLayout" (click)="direciona('Quem Somos')" href="https://centroproinf.com.br/#/blog/quemSomos">{{'Quem somos'}} </a></h4>
+        <h4> <a class="removerLayout" (click)="direciona('Cursos')" href="https://centroproinf.com.br/#/blog/cursos">{{'Cursos'}}</a></h4>
       </div>
     </div>
 
