--- a/cursoADVweb/src/app/areaAluno/contratacao/contratacao.component.html
+++ b/cursoADVweb/src/app/areaAluno/contratacao/contratacao.component.html
@@ -13,7 +13,7 @@
     <div class="col-12 pt-4 px-4 d-flex flex-wrap">
       <div class="col-3">
         <!-- <img style="border-radius: 10px;" src="{{curso.src}}" class="card-img-top" alt="..."> -->
-        <img style="border-radius: 10px;" src="https://centroproinf.com.br/video/Direito da crianca.jpg" class="card-img-top" alt="...">
+        <img style="border-radius: 10px;" src="{{curso.src}}" class="card-img-top" alt="...">
       </div>
       <div class="col-9 ps-3">
         <h2><p><b>{{curso.titulo}}</b></p></h2>
