--- a/cursoADVweb/src/app/blog/pages/cursos/descricaoCurso/descricao-curso.component.html
+++ b/cursoADVweb/src/app/blog/pages/cursos/descricaoCurso/descricao-curso.component.html
@@ -34,7 +34,7 @@
   <div class="col-12 d-flex flex-wrap {{isMobile? 'p-2':'p-5'}} ">
     <div class="{{isMobile? 'col-12':'col-6'}} d-flex justify-content-center">
       <!-- <img src="{{curso.src}}" style="border-radius: 30px;"  height="350" /> -->
-      <img src="https://centroproinf.com.br/video/Direito da crianca.jpg" style="border-radius: 30px;"  height="350" />
+      <img src="{{curso.src}}" style="border-radius: 30px;"  height="350" />
 
     </div>
     <div class="{{isMobile? 'col-12 pt-5':'col-6'}} d-flex justify-content-center">
