--- a/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
+++ b/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
@@ -43,7 +43,7 @@
       </div>
   </div>
   <div class=" d-flex justify-content-center {{isMobile? 'mt-3 col-12':'col-6'}}">
-    <img src="../../../../assets/imgs/quem somos inicio.png" class="" height="{{isMobile?'390':'600'}}">
+    <img src="../../../../assets/imgs/quemSomosInicio.png" class="" height="{{isMobile?'390':'600'}}">
 
   </div>
 </div>
@@ -82,7 +82,7 @@
       <div class="flip-box">
         <div class="flip-box-inner">
           <div class="flip-box-front">
-            <img src="assets/imgs/fundamento 1.png" style="width: 23rem; object-fit: contain;" height="300" />
+            <img src="assets/imgs/fundamento1.png" style="width: 23rem; object-fit: contain;" height="300" />
             <h1 class="text-center" style="top: -10rem; left: 3rem; position: relative;">
               <p class="text defineFont" style="width: 60%;">
                 <strong>ESPECIALIZAÇÃO PROFUNDA EM DIREITO DA CRIANÇA</strong>
@@ -90,7 +90,7 @@
             </h1>
           </div>
           <div class="flip-box-back">
-            <img src="assets/imgs/fundamento 1.png" style="width: 23rem; object-fit: contain;" height="350" />
+            <img src="assets/imgs/fundamento1.png" style="width: 23rem; object-fit: contain;" height="350" />
             <h4 class="text-center" style="top: -10rem; left: 3rem; position: relative;">
               <p class="text defineFont" style="width: 90%;">
                 <strong>{{texto.toLocaleUpperCase()}}</strong>
