--- a/cursoADVweb/src/app/blog/pages/quemSomos/quemSomos.component.html
+++ b/cursoADVweb/src/app/blog/pages/quemSomos/quemSomos.component.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="{{isMobile? 'col-12':'col-5'}} d-flex justify-content-end">
-      <img [style]="isMobile? '' :'position: relative; top: -1rem;'" src="../../../../assets/imgs/site proinf quem somos e cursos/11.png" alt="" height="{{isMobile?'368':'500'}}">
+      <img [style]="isMobile? '' :'position: relative; top: -1rem;'" src="../../../../assets/imgs/site proinf quem somos e cursos/meninovoando.png" alt="" height="{{isMobile?'368':'500'}}">
     </div>
   </div>
 
