--- a/cursoADVweb/src/app/areaAluno/contratacao/contratacao.component.html
+++ b/cursoADVweb/src/app/areaAluno/contratacao/contratacao.component.html
@@ -19,7 +19,8 @@
         <h2><p><b>{{curso.titulo}}</b></p></h2>
         <h1 *ngIf="curso.tipoCurso != 'CURSO'">
           <b style="color: #e64944;">{{parcelas}}</b><br>
-          <small style="font-size:medium;">{{valorFormatado}} à vista <br/> ou {{valorComDesconto}} inscritos pelas cotistas</small>
+          <small style="font-size:medium;">{{valorFormatado}} à vista <br/> </small>
+            <!-- ou {{valorComDesconto}} inscritos pelas cotistas</small> -->
         </h1>
         <h1 *ngIf="curso.tipoCurso == 'CURSO'">
           <b style="color: #e64944;">{{parcelas}}</b><br>
@@ -31,7 +32,7 @@
     <hr class="mt-2 mb-2 mx-4" style="width:100%; color: #e64944; height: 2px; border-bottom: 1px solid #e64944;">
 
     <form  [formGroup]="formularioCadastro" class="px-4 col-12 camposBrancos d-flex flex-wrap">
-      <div *ngIf="curso.tipoCurso != 'CURSO'" class="col-12 d-flex flex-wrap ps-3 pt-3 pe-3 mb-4" style="background-color: white; border-radius: 10px;">
+      <!-- <div *ngIf="curso.tipoCurso != 'CURSO'" class="col-12 d-flex flex-wrap ps-3 pt-3 pe-3 mb-4" style="background-color: white; border-radius: 10px;">
         <div class="col-12">
           <mat-form-field>
             <mat-label>Definir lista do candidato</mat-label>
@@ -71,7 +72,7 @@
 
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="col-12">
         <mat-form-field  class="example-full-width w-100 pt-2">
